<resources>
    <string name="app_name">LAB8-Plataformas</string>
    <string name="text_species_characterDetail_fragment">Species:</string>
    <string name="text_status_characterDetail_fragment">Status:</string>
    <string name="text_gender_characterDetail_fragment">Gender:</string>
    <string name="textMenu_ordenar_a_z">A -> Z</string>
    <string name="textMenu_ordenar_z_a">Z -> A</string>
    <string name="text_Characters_materialToolbar">Characters</string>
    <string name="text_characterDetail_materialToolbar">Characters details</string>
    <string name="textMensaje_topAppBar">Funcion no disponible, utilice el otro boton</string>
    <string name="textButton_sortAZ"><![CDATA[A -> Z]]></string>
    <string name="textButton_sortZA"><![CDATA[Z -> A]]></string>
    <string name="correoAceptado_loginFragment">cas21700@uvg.edu.gt</string>
    <string name="textContrasenia_loginFragment">Contraseña</string>
    <string name="textBtn_iniciarSesion_loginFragment">iniciar sesión</string>
    <string name="textCorreo_inputCorreo_loginFragment">Correo</string>
    <string name="textToast">Correo o contraseña incorrectas</string>
    <string name="textCorreo_fragment">cas21700@uvg.edu.gt</string>
    <string name="textContrasenia_fragment">cas21700@uvg.edu.gt</string>
    <string name="textOrigin_characterDetail">Origin:</string>
    <string name="text_episodeAppearances">Episodes:</string>
    <string name="textToolbar_characterDetails">Character details</string>
    <string name="textMenu_cerrarSesion">Cerrar sesión</string>
    <string name="keyInicioSesion">email</string>
    <string name="constant_iniciarSesion">cas21700@uvg.edu.gt</string>
    <string name="constant_noIniciarSesion">false</string>
    <string name="text_menu_sincronizar">Sincronizar</string>
    <string name="text_Advertencia">Advertencia</string>
    <string name="text_Cancelar">Cancelar</string>
    <string name="text_Eliminar">Eliminar</string>
    <string name="text_mensaje_cerrarSesion">¿Está seguro que desea salir? Se perderán todos los datos.</string>
    <string name="text_name_characterDetail">Name</string>
    <string name="text_bt_guardar_characterDetail">Guardar</string>
    <string name="text_mensaje_deleteCharacter">¿Está seguro que desea eliminarlo? Se perderán todos los datos.</string>
    <string name="text_mensaje_syncCharacter">¿Está seguro que desea actualizar? Se perderán todos los datos.</string>
    <string name="text_mensaje_saveNewData">Guardado con éxito.</string>
    <string name="text_mensaje_noInternet">¡Sin internet!</string>
</resources>