<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/id_listCharacter">
        <item
            android:id="@+id/menu_item_AZ"
            android:title="@string/textMenu_ordenar_a_z"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_item_ZA"
            android:title="@string/textMenu_ordenar_z_a"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_item_cerrarSesion"
            android:title="@string/textMenu_cerrarSesion"
            app:showAsAction="never" />
    </group>



    <item
        android:id="@+id/menu_item_sync"
        android:icon="@drawable/ic_sync"
        app:showAsAction="ifRoom"
        android:title="@string/text_menu_sincronizar" />


</menu>