<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Ui.fragments.Login.LoginFragment"
    android:background="@color/white"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/img_login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/imgLogo_height"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/textInput_correoText_loginFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rick_and_morty"
        android:layout_marginBottom="@dimen/margin_extraLarge"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="@dimen/margin_large"
        android:id="@+id/textInput_correoText_loginFragment"
        android:layout_width="@dimen/ceroDp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textInput_contrasenaText_loginFragment"
        android:hint="@string/textCorreo_inputCorreo_loginFragment"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/textInput_correoText_loginFragment_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="@dimen/margin_large"
        android:id="@+id/textInput_contrasenaText_loginFragment"
        android:layout_width="@dimen/ceroDp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_correoText_loginFragment"
        app:layout_constraintBottom_toTopOf="@id/button_iniciarSesion_loginfragment"
        android:hint="@string/textContrasenia_loginFragment"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/margin_large"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/black"
            android:id="@+id/textInput_contrasenaText_loginFragment_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:textColor="@color/white"
        app:backgroundTint="@color/color_toolbarActivity"
        android:id="@+id/button_iniciarSesion_loginfragment"
        android:layout_width="@dimen/ceroDp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInput_contrasenaText_loginFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:text="@string/textBtn_iniciarSesion_loginFragment"
        android:layout_marginTop="@dimen/margin_large"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correoAceptado_loginFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_large"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>